# altro_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
docker_scripts/: create_environment_profile.sh  docker_build.sh  docker_run.sh  docker_tag.sh
scripts/: build-x64.sh
test/: CMakeLists.txt
